$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2008-12-16 [B] Added swfupload style to eyeball css - work in progress for other themes {Abbas}
2008-12-16 [B] Fixed category list in modifyalb.php {Paver}
2008-12-15 [A] Added keyword separator {Paver}
2008-12-15 [B] Added missing javascripts {SaWey}
2008-12-15 [O] Replaced inline javascript of admin and albmgr section + optimised for jQuery (admin.js, albmgr.js) {SaWey}
2008-12-15 [A] Added previous and next tabs, plus dropdown list of tabs (with configuration option) {Paver}
2008-12-15 [O] Moved code to themes to create theme_msg_box, _cpg_die, _create_tabs, _breadcrumb {Paver}
2008-12-15 [O] Replaced inline javascript of slideshow btn & pic_info btn (displayimage.js) {SaWey}
2008-12-15 [O] Replaced inline javascript of sidebar (dTree.js) {SaWey}
2008-12-15 [O] Replaced inline javascript of bookmark function (scripts.js) {SaWey}
2008-12-15 [O] Replaced sort table in thumbnails by external javascript (thumbnails.js) {SaWey}
2008-12-15 [A] Added the fallback mechanism for flash upload interface {Abbas}
2008-12-14 [A] Modified breadcrumb for meta-albums to show more intuitive breadcrumb {Paver}
2008-12-14 [A] Added navbar buttons for inactive previous and next {Paver}
2008-12-14 [B] Fixed some bugs in voting and changed it to make better use of jQuery {SaWey}
2008-12-14 [C] Moved vanity icons into separate folder {GauGau}
2008-12-14 [C] Re-did batch-add graphics for fresher look {GauGau}
2008-12-14 [A] Added missing hook to add custom bbcode {SaWey}
2008-12-14 [A] Reworked upload form to show flash-based form or single file form - all other options removed {Paver}